--- a/src/Resources/CSS/Card.css
+++ b/src/Resources/CSS/Card.css
@@ -1,16 +1,20 @@
 .card-background-subTitle {
-  max-height: "3.6rem";
-  line-height: "1.2em";
+  max-height: 3.6rem;
+  line-height: 1.2em;
   text-overflow: "ellipsis";
 }
 
 .card-beatmap-title {
-  max-height: "5.4rem";
-  line-height: "1.2em";
+  max-height: 5.4rem;
+  line-height: 1.2em;
   margin-bottom: 1rem;
   overflow: hidden;
   text-overflow: "ellipsis";
   display: "-webkit-box";
   -webkit-line-clamp: 2;
   -webkit-box-orient: "vertical"
+}
+
+.card-info {
+  height: 10rem;
 }
